Clarify template vs constitution distinction and add template references
Updated README.md and eng02-prompt-templates.yaml to:
- Explicitly reference prompts/measure.tmpl and prompts/stitch.tmpl
- Clarify why templates are templates (parameters) vs constitutions (static)
- Show embedded template paths in configuration reference table

Templates are Go text/template files with parameters like {{.FieldName}}
that receive data structs at runtime (MeasurePromptData, StitchPromptData).

Constitutions are static YAML files with no parameters - they're embedded
as plain strings and passed as template parameters (PlanningConstitution,
ExecutionConstitution fields).

--- a/docs/engineering/eng02-prompt-templates.yaml
+++ b/docs/engineering/eng02-prompt-templates.yaml
@@ -11,6 +11,10 @@ introduction: |
   template data contracts, customization patterns, and conventions for writing
   effective prompts.
 
+  Templates are Go text/template files with parameters (e.g., {{.FieldName}})
+  that get filled in at runtime with dynamic data. Constitutions are static
+  YAML files that get embedded and passed as string parameters to the templates.
+
 sections:
   - title: Embedded Defaults
     content: |
