Add rel02.0-uc006 Specification Browser use case (mage-zh8)
Create use case covering bidirectional spec-to-code navigation: tree
view browsing use cases, PRDs, and test suites with expandable
touchpoints and source file references; CodeLens on Go annotation
comments linking back to specification YAML. Update road-map.yaml
with uc006 entry under rel02.0.

Stats:
  Lines of code (Go, production): 6525 (+0)
  Lines of code (Go, tests):      1975 (+0)
  Words (documentation):          3343 (+675)

--- a/docs/road-map.yaml
+++ b/docs/road-map.yaml
@@ -54,6 +54,9 @@ releases:
       - id: rel02.0-uc005-metrics-dashboard
         summary: Webview panel aggregating token usage, LOC progression, and diff stats
         status: not started
+      - id: rel02.0-uc006-specification-browser
+        summary: Spec tree view and CodeLens for bidirectional spec-to-code navigation
+        status: not started
 
   - version: "99.0"
     name: Unscheduled
