Implement generation.preserve_sources flag (prd002 R10) (GH-269#270)
- config.go: add PreserveSources bool field to GenerationConfig
- generator.go: guard resetGoSources in GeneratorStart and both
  resetGoSources + cleanGoSources in mergeGeneration (GeneratorStop)
  with !PreserveSources; add log lines when flag is active
- generator_test.go: add TestGeneratorStart_PreserveSources verifying
  Go source files survive GeneratorStart when flag is true
- configuration.yaml: set preserve_sources: true for cobbler-scaffold
  (library repo whose Go source must not be wiped)

Stats:
  Lines of code (Go, production): 10651 (+34)
  Lines of code (Go, tests):      12502 (+42)
  Words (documentation):          prd=7896 (+0), use_case=7122 (+0), test_suite=3883 (+0)

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -31,6 +31,7 @@ generation:
     cycles: 0
     branch: ""
     cleanup_dirs: []
+    preserve_sources: true
 cobbler:
     dir: .cobbler/
     issues_repo: petar-djukic/cobbler-scaffold
