Housekeeping: delete .beads/ dir and clean stale references (GH-318#322)
- git rm .beads/ (12 files: SQLite DB, socket, hooks, config, JSONL)
- cspell.json: remove "beads" from known words
- README.md: replace Beads diagram node with GitHubIssues; update 4 prose
  references (Measure/Stitch workflow, repo structure, Technology Choices)
- pkg/orchestrator/config.go: fix stale comment (line 257)
- pkg/orchestrator/stitch_test.go: fix stale comment (line 28)
- docs/road-map.yaml: update uc001 summary
- test-plan.yaml: remove beads-only test cases (beads:reset, bd create);
  update preconditions (bd CLI → gh CLI); update remaining cases to
  reference GitHub Issues instead of beads state

Stats:
  Lines of code (Go, production): 10760 (+0)
  Lines of code (Go, tests):      14018 (+0)
  Words (documentation):          19108 (+0)

--- a/docs/road-map.yaml
+++ b/docs/road-map.yaml
@@ -12,7 +12,7 @@ releases:
       through isolated execution to merge.
     use_cases:
       - id: rel01.0-uc001-orchestrator-initialization
-        summary: Config struct, constructor with defaults, beads initialization
+        summary: Config struct, constructor with defaults, GitHub Issues initialization
         status: done
       - id: rel01.0-uc002-generation-lifecycle
         summary: Generation start, run, stop, reset, list, switch
